# PatriciaC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
perf/: CMakeLists.txt  bench_insfind.cpp  bench_main.cpp
src/: CMakeLists.txt  cpatricia.c  cpatricia.h  cpatricia_map.c  cpatricia_map.h  cpatricia_set.c  cpatricia_set.h  vmbumppool.c  vmbumppool.h
tests/: CMakeLists.txt  helper_build_tree.c  helper_build_tree.h  test_basicapi.c  test_bitops.c  test_iterator_basic.c  test_iterator_fuzz.c  test_iterator_modes.c
